Pull latest from releasev2 and resolve merge conflicts with local fixes.
- Maintained releasev2's transactionType naming conventions.
- Preserved local fixes for DAO methods and IncrementalPredictionService logic.
- Resolved conflicts in entities and DAOs.